css/components/profile.css
.profile {
  font-family: Arial;
  padding: 15px;
  border: 2px solid var(--green);
  margin: 15px;
  background-color: var(--violet);
  display: grid;
  grid-template-areas:
    "pic pic name"
    "pic pic name"
    "about about about"
    "quest quest quest"
    "book book book"
    "sett sett sett"
    "tex tex button";
}

.profile-pic {
  grid-area: pic;
  font-size: 4.5rem;
  align-items: center;
  justify-content: center;
}

div.profile-pic {
  border: 5px solid var(--green);
  border-radius: 50%;
  height: 7rem;
  width: 7rem;
  display: flex;
  position: relative;
}

.hat {
  position: absolute;
  color: white;
  bottom: 93px;
  left: 50px;
}

.name {
  grid-area: name;
  color: var(--green);
}
.about {
  margin: 10px;
  grid-area: about;
}

.question-counter {
  margin: 10px;
  grid-area: quest;
  display: flex;
}

.bookmark-counter {
  margin: 10px;
  grid-area: book;
  display: flex;
}

.question-counter p {
  padding-left: 7px;
}

.bookmark-counter p {
  padding-left: 7px;
}
div i {
  color: var(--green);
}

.settings {
  grid-area: sett;
  padding-left: 7px;
  margin-top: 50px;
}

.switch-text {
  grid-area: tex;
  padding-left: 7px;
  margin-top: 7px;
}

.settings-container {
  display: flex;
  justify-content: space-between;
}

/* classes for dark mode */
.dark-body {
  background-color: black;
}

.dark-content {
  background-color: black;
  color: var(--violet);
}

/* slider reference: https://www.w3schools.com/howto/howto_css_switch.asp */
/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
  /* grid-area: button; */
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: grey;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: var(--green);
}

input:focus + .slider {
  box-shadow: 0 0 1px var(--green);
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

p {
  display: block;
}

